tests/application/cloudsql-auth-proxy/application-no-cloudsql-patch.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: patchapp
spec:
  image: image
  port: 8080
  cloudSql:
    enabled: true
    connectionName: test-project-bda1:europe-north1:pg-01-test
    serviceAccount: grafana@test-project-bda1.iam.gserviceaccount.com
