tests/application/cloudsql-auth-proxy/application-no-cloudsql.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: patchapp
spec:
  image: image
  port: 8080
