tests/application/cloudsql-auth-proxy/application-public-ip.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: randomapp-public
spec:
  image: image
  port: 8080
  gcp:
    cloudSqlProxy:
      connectionName: test-project-bda1:europe-north1:pg-01-test
      serviceAccount: grafana@test-project-bda1.iam.gserviceaccount.com
      ip: 10.0.0.1
      publicIP: true
