tests/application/cloudsql-auth-proxy/application.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: randomapp
spec:
  image: image
  port: 8080
  cloudSql:
    enabled: true
    connectionName: skip-prod-bda1:europe-north1:skip-pg-01-prod
