tests/application/cloudsql-auth-proxy/cloudsql-but-not-enabled.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: lazyconfigapp
spec:
  image: image
  port: 8080
  gcp:
    cloudSqlProxy:
