tests/application/cloudsql-auth-proxy/set-version.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: randomappwithversion
spec:
  image: image
  port: 8080
  gcp:
    cloudSqlProxy:
      connectionName: test-project-bda1:europe-north1:pg-01-test
      version: 2.8.12
      serviceAccount: grafana@test-project-bda1.iam.gserviceaccount.com
      ip: 10.0.0.1
