tests/application/cloudsql-auth-proxy/application-no-cloudsql-assert.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: patchapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patchapp
  annotations:
    argocd.argoproj.io/sync-options: "Prune=false"
spec:
  selector:
    matchLabels:
      app: patchapp
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        argocd.argoproj.io/sync-options: "Prune=false"
        cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
      labels:
        app: patchapp
    spec:
      containers:
        - name: patchapp
          image: image
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 150
            runAsUser: 150
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
          volumeMounts:
            - mountPath: /tmp
              name: tmp
      imagePullSecrets:
        - name: github-auth
      securityContext:
        fsGroup: 150
        supplementalGroups:
          - 150
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: patchapp
      volumes:
        - emptyDir: {}
          name: tmp
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: "kubernetes.io/hostname"
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchExpressions:
              - key: app
                operator: In
                values:
                  - patchapp
          matchLabelKeys:
            - pod-template-hash
        - maxSkew: 1
          topologyKey: "onprem.gke.io/failure-domain-name"
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchExpressions:
              - key: app
                operator: In
                values:
                  - patchapp
          matchLabelKeys:
            - pod-template-hash
---
apiVersion: autoscaling/v2
kind: HorizontalPodAutoscaler
metadata:
  name: patchapp
spec:
  minReplicas: 2
  maxReplicas: 5
  metrics:
    - type: Resource
      resource:
        name: cpu
        target:
          type: Utilization
          averageUtilization: 80
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: patchapp
---
apiVersion: v1
kind: Service
metadata:
  name: patchapp
spec:
  selector:
    app: patchapp
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
      appProtocol: http
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: patchapp
spec:
  selector:
    matchLabels:
      app: patchapp
  mtls:
    mode: STRICT
