tests/application/cloudsql-auth-proxy/application-public-ip-assert.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: randomapp-public
  annotations:
    iam.gke.io/gcp-service-account: "grafana@test-project-bda1.iam.gserviceaccount.com"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: randomapp-public
  annotations:
    argocd.argoproj.io/sync-options: "Prune=false"
spec:
  selector:
    matchLabels:
      app: randomapp-public
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        argocd.argoproj.io/sync-options: "Prune=false"
        cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
      labels:
        app: randomapp-public
    spec:
      containers:
        - name: randomapp-public
          image: image
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 150
            runAsUser: 150
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
          volumeMounts:
            - mountPath: /tmp
              name: tmp
        - name: cloudsql-proxy
          image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.15.1
          args:
            - "test-project-bda1:europe-north1:pg-01-test"
            - "--auto-iam-authn"
            - "--structured-logs"
            - "--port=5432"
            - "--quitquitquit"
            - "--prometheus"
          securityContext:
            runAsNonRoot: true
            privileged: false
            runAsUser: 200
            runAsGroup: 200
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            seccompProfile:
              type: "RuntimeDefault"
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
      imagePullSecrets:
        - name: github-auth
      securityContext:
        fsGroup: 150
        supplementalGroups:
          - 150
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: randomapp-public
      volumes:
        - emptyDir: {}
          name: tmp
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: "kubernetes.io/hostname"
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchExpressions:
              - key: app
                operator: In
                values:
                  - randomapp-public
          matchLabelKeys:
            - pod-template-hash
        - maxSkew: 1
          topologyKey: "onprem.gke.io/failure-domain-name"
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchExpressions:
              - key: app
                operator: In
                values:
                  - randomapp-public
          matchLabelKeys:
            - pod-template-hash
---
apiVersion: autoscaling/v2
kind: HorizontalPodAutoscaler
metadata:
  name: randomapp-public
spec:
  minReplicas: 2
  maxReplicas: 5
  metrics:
    - type: Resource
      resource:
        name: cpu
        target:
          type: Utilization
          averageUtilization: 80
    - type: Resource
      resource:
        name: memory
        target:
          type: Utilization
          averageUtilization: 80
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: randomapp-public
---
apiVersion: v1
kind: Service
metadata:
  name: randomapp-public
spec:
  selector:
    app: randomapp-public
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
      appProtocol: http
---
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: randomapp-public
spec:
  selector:
    matchLabels:
      app: randomapp-public
  mtls:
    mode: STRICT
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: randomapp-public
spec:
  podSelector:
    matchLabels:
      app: randomapp-public
  policyTypes:
    - Egress
  egress:
    - ports:
        - protocol: TCP
          port: 3307
      to:
        - ipBlock:
            cidr: 10.0.0.1/32
