tests/application/cloudsql-auth-proxy/set-version-assert.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: randomappwithversion
  annotations:
    iam.gke.io/gcp-service-account: "grafana@test-project-bda1.iam.gserviceaccount.com"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: randomappwithversion
  annotations:
    argocd.argoproj.io/sync-options: "Prune=false"
spec:
  selector:
    matchLabels:
      app: randomappwithversion
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        argocd.argoproj.io/sync-options: "Prune=false"
        cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
      labels:
        app: randomappwithversion
    spec:
      containers:
        - name: randomappwithversion
          image: image
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 150
            runAsUser: 150
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
          volumeMounts:
            - mountPath: /tmp
              name: tmp
        - name: cloudsql-proxy
          image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.8.12
          args:
            - "test-project-bda1:europe-north1:pg-01-test"
            - "--auto-iam-authn"
            - "--structured-logs"
            - "--port=5432"
            - "--quitquitquit"
            - "--prometheus"
            - "--private-ip"
          securityContext:
            runAsNonRoot: true
            privileged: false
            runAsUser: 200
            runAsGroup: 200
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            seccompProfile:
              type: "RuntimeDefault"
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
      imagePullSecrets:
        - name: github-auth
      securityContext:
        fsGroup: 150
        supplementalGroups:
          - 150
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: randomappwithversion
      volumes:
        - emptyDir: {}
          name: tmp
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: "kubernetes.io/hostname"
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchExpressions:
              - key: app
                operator: In
                values:
                  - randomappwithversion
          matchLabelKeys:
            - pod-template-hash
        - maxSkew: 1
          topologyKey: "onprem.gke.io/failure-domain-name"
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchExpressions:
              - key: app
                operator: In
                values:
                  - randomappwithversion
          matchLabelKeys:
            - pod-template-hash
---
apiVersion: autoscaling/v2
kind: HorizontalPodAutoscaler
metadata:
  name: randomappwithversion
spec:
  minReplicas: 2
  maxReplicas: 5
  metrics:
    - type: Resource
      resource:
        name: cpu
        target:
          type: Utilization
          averageUtilization: 80
    - type: Resource
      resource:
        name: memory
        target: 
          type: Utilization
          averageUtilization: 80
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: randomappwithversion
---
apiVersion: v1
kind: Service
metadata:
  name: randomappwithversion
spec:
  selector:
    app: randomappwithversion
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
      appProtocol: http
---
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: randomappwithversion
spec:
  selector:
    matchLabels:
      app: randomappwithversion
  mtls:
    mode: STRICT
---
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: randomappwithversion-egress-be39f0357195cfa5
spec:
  addresses:
    - 10.0.0.1
  endpoints:
    - address: 10.0.0.1
  exportTo:
    - .
    - istio-system
    - istio-gateways
  hosts:
    - randomappwithversion-a0921a82f8f8e22c.cloudsql
  ports:
    - name: cloudsqlproxy
      number: 3307
      protocol: TCP
  resolution: STATIC
---
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: randomappwithversion
spec:
  egress:
    - hosts:
        - ./randomappwithversion-a0921a82f8f8e22c.cloudsql
  outboundTrafficPolicy: {}
  workloadSelector:
    labels:
      app: randomappwithversion
